# senkron-ai-hub

./: .gitignore 2  README 2.md  README.md  new-system-map.md  rol-map2.md
tourism-ai-platform/ai-services/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
tourism-ai-platform/ai-services/ai-nlp/: .env.example  Dockerfile  requirements.txt
tourism-ai-platform/ai-services/ai-nlp/app/: config.py  main.py
tourism-ai-platform/ai-services/ai-nlp/tests/: test_rag.py
tourism-ai-platform/ai-services/ai-personalization/: .env.example  Dockerfile
tourism-ai-platform/ai-services/ai-personalization/app/: main.py
tourism-ai-platform/ai-services/ai-personalization/tests/: test_recommendations.py
tourism-ai-platform/ai-services/ai-speech/: .env.example  Dockerfile  requirements.txt
tourism-ai-platform/ai-services/ai-speech/app/: config.py  main.py
tourism-ai-platform/ai-services/ai-speech/tests/: test_speech.py
tourism-ai-platform/ai-services/ai-vision/: .env.example  Dockerfile  requirements.txt
tourism-ai-platform/ai-services/ai-vision/app/: main.py
tourism-ai-platform/ai-services/ai-vision/tests/: test_vision.py
tourism-ai-platform/ai-services/ai_services/: __init__.py
tourism-ai-platform/ai-services/ai_services/hub_core/: __init__.py  context_manager.py  (+3 more)
tourism-ai-platform/ai-services/hub-core/: __init__.py
tourism-ai-platform/ai-services/interfaces/: __init__.py
tourism-ai-platform/ai-services/orchestrator-svc/: .env.example  Dockerfile  requirements.txt
(+452 files in other folders)
