[tool.poetry]
name = "ai-services"
version = "0.1.0"
description = "AI services for the Tourism AI Platform"
authors = ["Tourism AI Team <team@tourism.ai>"]
readme = "README.md"
packages = [{ include = "ai_services" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
ipython = "^8.19.0"
jupyter = "^1.0.0"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
asyncio_mode = "auto"
testpaths = [
  "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
